Complite header blocks

--- a/sass/_setting.sass
+++ b/sass/_setting.sass
@@ -1,1 +1,25 @@
+*
+  box-sizing: border-box
 
+body
+  font-family: Open Sans
+  font-style: normal
+  font-weight: normal
+  font-size: 14px
+  line-height: 20px
+  color: $text-color
+.title
+  font-family: Roboto
+  font-style: normal
+  font-weight: bold
+  font-size: 36px
+  line-height: 48px
+  letter-spacing: 0.2px
+  color: $title-color
+.container
+  max-width: 1140px
+  margin: 0 auto
+li
+  list-style: none
+a
+  text-decoration: none
